changes to include alarm manager, send symptoms form

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,6 +36,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ViewCalendarActivity"
+            android:label="@string/title_activity_view_calendar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".SendSymptomsActivity"
+            android:label="@string/title_activity_send_symptoms" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <receiver android:name=".AlarmReceiver"></receiver>
     </application>
 
 </manifest>
